[239] [Ruchika | Sahiti]Fix sonar issues